style.css
body {
    background-image: url(imgs/bg4.png);
    
    background-repeat: no-repeat;
}

body{
    text-align:center;
    background-color:#ffcc8e;
  }
  
  .button{
    position:relative;
    display:inline-block;
    margin:20px;
  }
  
  .button a{
    color:white;
    font-family:Helvetica, sans-serif;
    font-weight:bold;
    font-size:68px;
    text-align: center;
    text-decoration:none;
    background-color:#3C91E6;
    display:block;
    position:relative;
    padding:119px 127px;

    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    text-shadow: 0px 1px 0px #000;
    filter: dropshadow(color=#000, offx=0px, offy=1px);
    
    -webkit-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #1264AB;
    -moz-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #1264AB;
    box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #1264AB;
    
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
  }
  
  .button a:active{
    top:10px;
    background-color:#3C91E6;
    
    -webkit-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #1264AB;
    -moz-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #1264AB;
    box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #1264AB;
  }
  
  .button:after{
    content:"";
    height:100%;
    width:100%;
    padding:4px;
    position: absolute;
    bottom:-15px;
    left:-4px;
    z-index:-1;
    background-color:white;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
  }

